--- a/QuanLiHocSinh/QuanLiHocSinh/frmMain.resx
+++ b/QuanLiHocSinh/QuanLiHocSinh/frmMain.resx
@@ -118,6 +118,123 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonItem14.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACYAAAAmCAYAAACoPemuAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
+        DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
+        bGUAAEjHnZZ3VFTXFofPvXd6oc0wAlKG3rvAANJ7k15FYZgZYCgDDjM0sSGiAhFFRJoiSFDEgNFQJFZE
+        sRAUVLAHJAgoMRhFVCxvRtaLrqy89/Ly++Osb+2z97n77L3PWhcAkqcvl5cGSwGQyhPwgzyc6RGRUXTs
+        AIABHmCAKQBMVka6X7B7CBDJy82FniFyAl8EAfB6WLwCcNPQM4BOB/+fpFnpfIHomAARm7M5GSwRF4g4
+        JUuQLrbPipgalyxmGCVmvihBEcuJOWGRDT77LLKjmNmpPLaIxTmns1PZYu4V8bZMIUfEiK+ICzO5nCwR
+        3xKxRoowlSviN+LYVA4zAwAUSWwXcFiJIjYRMYkfEuQi4uUA4EgJX3HcVyzgZAvEl3JJS8/hcxMSBXQd
+        li7d1NqaQffkZKVwBALDACYrmcln013SUtOZvBwAFu/8WTLi2tJFRbY0tba0NDQzMv2qUP91829K3NtF
+        ehn4uWcQrf+L7a/80hoAYMyJarPziy2uCoDOLQDI3fti0zgAgKSobx3Xv7oPTTwviQJBuo2xcVZWlhGX
+        wzISF/QP/U+Hv6GvvmckPu6P8tBdOfFMYYqALq4bKy0lTcinZ6QzWRy64Z+H+B8H/nUeBkGceA6fwxNF
+        hImmjMtLELWbx+YKuGk8Opf3n5r4D8P+pMW5FonS+BFQY4yA1HUqQH7tBygKESDR+8Vd/6NvvvgwIH55
+        4SqTi3P/7zf9Z8Gl4iWDm/A5ziUohM4S8jMX98TPEqABAUgCKpAHykAd6ABDYAasgC1wBG7AG/iDEBAJ
+        VgMWSASpgA+yQB7YBApBMdgJ9oBqUAcaQTNoBcdBJzgFzoNL4Bq4AW6D+2AUTIBnYBa8BgsQBGEhMkSB
+        5CEVSBPSh8wgBmQPuUG+UBAUCcVCCRAPEkJ50GaoGCqDqqF6qBn6HjoJnYeuQIPQXWgMmoZ+h97BCEyC
+        qbASrAUbwwzYCfaBQ+BVcAK8Bs6FC+AdcCXcAB+FO+Dz8DX4NjwKP4PnEIAQERqiihgiDMQF8UeikHiE
+        j6xHipAKpAFpRbqRPuQmMorMIG9RGBQFRUcZomxRnqhQFAu1BrUeVYKqRh1GdaB6UTdRY6hZ1Ec0Ga2I
+        1kfboL3QEegEdBa6EF2BbkK3oy+ib6Mn0K8xGAwNo42xwnhiIjFJmLWYEsw+TBvmHGYQM46Zw2Kx8lh9
+        rB3WH8vECrCF2CrsUexZ7BB2AvsGR8Sp4Mxw7rgoHA+Xj6vAHcGdwQ3hJnELeCm8Jt4G749n43PwpfhG
+        fDf+On4Cv0CQJmgT7AghhCTCJkIloZVwkfCA8JJIJKoRrYmBRC5xI7GSeIx4mThGfEuSIemRXEjRJCFp
+        B+kQ6RzpLuklmUzWIjuSo8gC8g5yM/kC+RH5jQRFwkjCS4ItsUGiRqJDYkjiuSReUlPSSXK1ZK5kheQJ
+        yeuSM1J4KS0pFymm1HqpGqmTUiNSc9IUaVNpf+lU6RLpI9JXpKdksDJaMm4ybJkCmYMyF2TGKQhFneJC
+        YVE2UxopFykTVAxVm+pFTaIWU7+jDlBnZWVkl8mGyWbL1sielh2lITQtmhcthVZKO04bpr1borTEaQln
+        yfYlrUuGlszLLZVzlOPIFcm1yd2WeydPl3eTT5bfJd8p/1ABpaCnEKiQpbBf4aLCzFLqUtulrKVFS48v
+        vacIK+opBimuVTyo2K84p6Ss5KGUrlSldEFpRpmm7KicpFyufEZ5WoWiYq/CVSlXOavylC5Ld6Kn0Cvp
+        vfRZVUVVT1Whar3qgOqCmrZaqFq+WpvaQ3WCOkM9Xr1cvUd9VkNFw08jT6NF454mXpOhmai5V7NPc15L
+        Wytca6tWp9aUtpy2l3audov2Ax2yjoPOGp0GnVu6GF2GbrLuPt0berCehV6iXo3edX1Y31Kfq79Pf9AA
+        bWBtwDNoMBgxJBk6GWYathiOGdGMfI3yjTqNnhtrGEcZ7zLuM/5oYmGSYtJoct9UxtTbNN+02/R3Mz0z
+        llmN2S1zsrm7+QbzLvMXy/SXcZbtX3bHgmLhZ7HVosfig6WVJd+y1XLaSsMq1qrWaoRBZQQwShiXrdHW
+        ztYbrE9Zv7WxtBHYHLf5zdbQNtn2iO3Ucu3lnOWNy8ft1OyYdvV2o/Z0+1j7A/ajDqoOTIcGh8eO6o5s
+        xybHSSddpySno07PnU2c+c7tzvMuNi7rXM65Iq4erkWuA24ybqFu1W6P3NXcE9xb3Gc9LDzWepzzRHv6
+        eO7yHPFS8mJ5NXvNelt5r/Pu9SH5BPtU+zz21fPl+3b7wX7efrv9HqzQXMFb0ekP/L38d/s/DNAOWBPw
+        YyAmMCCwJvBJkGlQXlBfMCU4JvhI8OsQ55DSkPuhOqHC0J4wybDosOaw+XDX8LLw0QjjiHUR1yIVIrmR
+        XVHYqLCopqi5lW4r96yciLaILoweXqW9KnvVldUKq1NWn46RjGHGnIhFx4bHHol9z/RnNjDn4rziauNm
+        WS6svaxnbEd2OXuaY8cp40zG28WXxU8l2CXsTphOdEisSJzhunCruS+SPJPqkuaT/ZMPJX9KCU9pS8Wl
+        xqae5Mnwknm9acpp2WmD6frphemja2zW7Fkzy/fhN2VAGasyugRU0c9Uv1BHuEU4lmmfWZP5Jiss60S2
+        dDYvuz9HL2d7zmSue+63a1FrWWt78lTzNuWNrXNaV78eWh+3vmeD+oaCDRMbPTYe3kTYlLzpp3yT/LL8
+        V5vDN3cXKBVsLBjf4rGlpVCikF84stV2a9021DbutoHt5turtn8sYhddLTYprih+X8IqufqN6TeV33za
+        Eb9joNSydP9OzE7ezuFdDrsOl0mX5ZaN7/bb3VFOLy8qf7UnZs+VimUVdXsJe4V7Ryt9K7uqNKp2Vr2v
+        Tqy+XeNc01arWLu9dn4fe9/Qfsf9rXVKdcV17w5wD9yp96jvaNBqqDiIOZh58EljWGPft4xvm5sUmoqb
+        PhziHRo9HHS4t9mqufmI4pHSFrhF2DJ9NProje9cv+tqNWytb6O1FR8Dx4THnn4f+/3wcZ/jPScYJ1p/
+        0Pyhtp3SXtQBdeR0zHYmdo52RXYNnvQ+2dNt293+o9GPh06pnqo5LXu69AzhTMGZT2dzz86dSz83cz7h
+        /HhPTM/9CxEXbvUG9g5c9Ll4+ZL7pQt9Tn1nL9tdPnXF5srJq4yrndcsr3X0W/S3/2TxU/uA5UDHdavr
+        XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
+        fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
+        tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
+        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEgAACxIB0t1+/AAAD4xJREFUWEfNmHlcj+n6
+        x+8U7YuylLIMUQmVTEIhoqIsLUIjWrSjVCpbEippVYoSMS1CIdmbaIwsx76MYWyTWSwzxozBOIf37y4z
+        5ndec2Zerznn/HGu1+vzvZ/n/n6/1/1+rue+r+e+HgH8T+rtx++srRAKWlLqb0+VDYRQMZTqKvvayY72
+        GrJzqFA1myM6Oq0Rhu4lwtCjXHSZuFV0cFwnNKyXCqHjIYRqDyE6vPWhqPm2bSP9qlvKVvXt+b+wvwDW
+        RYh2naVz/Zbvuglt62Bh5LpD0Tb6qv6E7Ie9vAtemE7N/4fJlNy/95iQ+oPOyIX3RB/P40LFKl2IjmNa
+        fSiotDb/JTAZmBZrbdubCzXrDHWHRV8NSz5BQOE1lu64xdr6b9hw7BuKj30l1UzBkbus3nuTyNJLeC7b
+        h/GklS+FvnO9EHpTpRMlGXYhNAb+J2DaUsq/nBuFq49MfuKReoyMult8eOYryhpvsfHAFQr3XqKg9hLr
+        dp9n3a5zFOw6w/rdZyg9dJmKxuvyN5dYsOE4fafmI7RG1kkia6FiIhu1X3z/3v4cTLRGS19oWu60Ct9B
+        1qG7VB+9woZ950ndfY7UypOkljeRVnGyVasrmkiXfasrT7Cm/Lg8/oS08o/Jqmyk7MBpKusvE5Z7Ag2r
+        qB+F6NUSvT+0PwFTlFJ4Txg5XnRL2s+Wozco3NXE4sIDxBcfIXbzEebl7CYkrYqglCrC03cSk1Pb+n1i
+        0RGSNh4mqaSe5ZsbWo8XrasjpeQg5ftPsmr7Zbq7ZCLa9Ih5O9bv7U/AhJ7oPuZv7iv3kF9ziiXFh5kr
+        B45I3cbkxFLs4vIZGbaaSfMzmbJgLeMiMrDzT8EpMp/AlZVEZ9UQnbOHmLx9xKyVyt5N5JpqIuUFZJQe
+        Irn8HL0mFSKUBywQanLVKsup1xILRYVW/TFYe/PaUXEfkrzpABGrtxOwugb/FeU4zcllSlwOBYWlfLyj
+        mhsHD3H3aANXDh2irLiM6XNSGRaYzsyFxQQt30LgikoCV20nWLbByeUEJZXht2QrCZk7mb/uOHpjZOTU
+        jdxblsRbSTCpfw2mpDXP2GcFkZmVfJCwHq/FpXhLh8NDs3ENSOLLwmyoLOJl1SaebyvheVUJP9eWweEq
+        XtRtpTBxJb3GxdLfNQG38Ew8Y9fjGV2IZ9Q6POfl4SU1MTyHafPWMjGhFuXB0Q/kSughJNOfgZmo2U55
+        MXlJER5z0hkTkoGzdOoSU0D3acnEz4jg53kzuDTHnyuxQXyWGM7N5LlSc7iTMg82LSTfbxbvz1xCxKpc
+        +tgF0NMulEGTF2EzKQEr5/n0HhaC6fA5uM1OY1bsOkx9tyF6jK5oHV1BgrVR/Bdg7buu7yuj4hq6kqHT
+        l2A3cyV2YZnYhaRjODGBQlc3vvay58LsidyI9ORWgg+3l87gzjIfHid782rZBKxMRzOneCNP3lxj7c6N
+        uIcuYKBLKBajg7CfPAefyGUU7KzkwMVDuPgnYeOzHg3nVXIxqFm3Mij8HqyHmq3r08GzE7HxiGGgZxzW
+        U5Zg47eS93ySsHQOo8ndgZtThnBp+hCuzbTlZsgw7saN5X7qFF4VfsDlqDF0NnNjw9kdnHqyn6MP9nP4
+        3h5KjpdSUL+RzU1bqfl0J2d/aiC1KhcjmwjsfbIw9t2KMBhe8AvHP4GpC3XdqC6Tgnh/2nzM5RX2nxBF
+        P/cFWM5YgrrnYjwdvWh27M15pz5ccjfhuq85t8MtaI4dxNfL7KHcg+yZ4zFxC6Lx6S5qbpVRdGoDRafX
+        s/liEcXnC8n8OIslu1eScnQFY8PC6WI5DxvPNMx9i1AaOueeUFbWE22V/h+YQpsRbbqY1vX0CpdAwZg4
+        z8ZkXDgm7pGYfhCP6uQFJDk48GhsN+74DODR3EE8SxzKszUOPMlx5Ie1YyXYaFyGDsc9ZSVXXtdReaWU
+        0gsbKDiZQ9pHaSytSyK2eiFR1fGElIfS18WP92zj6Ou6gv6+2eh45SC620wSXfop/gZm2mG++gS7mwN8
+        59LfIQAzedVmbjJqXnPRn7mYbp7zuTJ5MPiZ8zTCiuboQTQvt+fnD13kapwMjV482DqBXv1dyP2kmLOv
+        athxdSvbr21h07n15HySyYrDySyoWUjY7hCcVrlLKLkIHJdKsJVYB+diELQDYWi/UCip674DUzA3zu4Q
+        4Prt4IxYBo4PxMIpBAvPcKynzqNjQDJjpoRweoQRSUP6YDfIht4jnDEYNo6BFkPInCej9dCfkx9Oo++4
+        CM48r6PhUSUVnxay6WIe+aczWNUgo1UbQ8DWYLw+nMjgcHdMhi3EwjkZi0mrGBy3EeOI/SgYOBTLZdn/
+        HZhSf/PNBl4eP9ulLMY6IQwr7xCsnEKxmjYPC/8YbCb4YOsZxKj4PPwK61i05yRLq48xJT6fNpYzGG7n
+        gJNcsUmbZE7jAgebK9h5cyMll3LIPLGCpYfimVs9h4AqP6Z+OJlBXsGYj0zGatwqrGaswXbxNvqGHqRN
+        t/F1QkHN8R2YoqlJpZbj6DfWQXMZFhnF+4mR2PrOY5C8peaunrikVxB2/meybsnc+jXs+w6aXkGz/POF
+        r7/FKTRLeupLT5sxNF0v5zYHaXixhYp7WeRfXc6K03HEHosguMGbSWs9sHBcwiCXdN6fnC6jVcSQqB0Y
+        eG5HmHo1CLWOE96BaVj2q1Czt3utO3y8nJQ+WIWEYTo/FP0x49CxcaT7+osM2vUA1+ob+B3+gvimb8i4
+        +j0bbj/jnnRw9OF3aPdzomfv4Shq92FcqBeJNbEs/iiWgJ3+OGe70T1oMMLOGhUbb/SHxNFrTDL9PFZj
+        FV1KV+9SlCcWozLQq15Ju5PrOzA9W4uijq6jf9Ic5Yya5Qi05BxSdRmHkr01yh6zEenn0VrThHHeKQaX
+        XmZy7W3mNz0g7eK31EsH45eX0Md2jDy6S05hPvY2Q+X8MEGoWSJ030e30xBG209hdeoq7J3CEN0CaTs4
+        HjXnRNQmrKft+DVo+W5Ac6D7TmU1HZl7fgEzGNo3Rd9j9Neak9zQdHBE09kJrbFj0bYdgPqsFBSiPkYE
+        70TEHUIr5Th9ii4ycvtNIs48ofgZGAzyJSJgknT10S/ay9mzueytWMTRXUu50bQSfloLP6RgYecnb1kc
+        6mOXozoxAxUZNS2vJPQCd6Fl6Z6t2E6t5zswU5vufjahjhc6R3ujNNEZdQ9XNFxGozvcFpXp6xGz9iH8
+        KhGRdbRNOopR7t+w2HQJr09+wKP+UWtUGrcHwKt0/vHZQvhyOXwv9V0C3I+AG4FyQs5gd7oTok8YbZ1S
+        0XSVUZJZX0c+gzW9i+kUdZL2lk7h7dTV1d+BddJR6TsucOjm0KMx2OX5YbzoAzSmOKDu6oHiLDkp/aoQ
+        ATJi4XWIhUfQSGmkV94ZHOufYJRwiE49LPnunEwbn8/g5flAXp6eyYvjXjxvcOHHuhH8VDuUN/V9iJo6
+        CmG1Eg2fdLT9M9D2zUVzegkqAQfoElX7qmOvvoN1u3RvZWr9MDbUVBo+spd3jEx+M3cE478nCpfSqehH
+        L0O4H5GqRnhKeUsFHUYsOoV25jlMqu4jhi/D302mnoum/GN/L57t6StlwY/VZvywrSffb+nKq816PF8n
+        sHaajnAoRCcmB+0FBWj4VqARWIV24kV6BOX9TVYBbVuqjHdgHXRVhZ5WO/W5WZNu+FbMxrPQl6kVs9AJ
+        K0bBrQK90HT0opLQDJaPp+kLUfSRhUX0MdouuYqwDqIy+T04qMvTUh2+36jCk0JFnqxrw3d5ijzOVoYN
+        gguJ7Wkr04SS3yZ0YsvRCtqOdvgu2obX0q3wC4zHeEV0Nuoq9Lv3/A3sV/PxsVhQcjWeGRs/wLs4CKtl
+        UQxYFcj7JcGYlS+g69bFdMqLpcOyMDQXpsnoldPbfzbPy9rB1jY8LNTk20I1Huer8DhPhYe5ajzI1pD7
+        NMHaEAuEWxmaSTJC0TXoRO1DI3Yvmtse06+o8QtNdRUdZVV1oaqu+RuYmtxvt9RFOqpKugXVAbezLsQT
+        Ue5P9MFwfPbOx6FyEWZbltGtbDUG23PQr8ih8+YMRG4RvdNXcG+tHLxAupJ6I/X3dYq8zmsDubIvRypF
+        4BQQjkhuRC9/P9rZTegWn0FJruy+n8PAqTOD34bmrf0TmGpLHSA7J401H7XtSvrfFzbGEbMnguQTy0g4
+        uQbfY9kMqc2k985cOlevo/O2TXTdVonK+m10S8ygSO42rqZ24HGaIi/TBE+lbiercWzZe8xZPBvV7AYM
+        az5Gt/ICejXXaFd2HaPLMHhBxv4OOrqtc+tX/ROYigTTkK2DTQ+RkDA1ovJWKUvlAzhkTzxLT6TKTF9I
+        2vUyIs9X4dhYRv+PKhlwrJb+h+voWHMchRJZXGTtwGRVHv2SVtBr6WoM12xBc8sxROVV9Pd+QpdymRI2
+        npUXcwn902C3sf5ae0VFrTYSpqWK/VXvwFrqgF+lptZOVlOKws171MJ9T2rJ/LySkH1ZhB3LI+F8CZk3
+        5Y709gmybpwm8upp3K+cwvlKE7bnLmB84jMMj3xG1303Mau/ivHJK6jLSrzzIQm15wztiy+gVPkpXR+D
+        Q13jrZ5d2vdveTvSUpO3tL/qHdgf2ajJI+Ztvb39den3DcQdrWLu0Z3EXjhAys0mqpo/o+HL++z/6hsK
+        mr8k8d4tIr+4wtw7jSy/e5xFzZcZeO1zDE5cwPTcp+gdb0bpzCP6yQEnnDh207iDjkVnTSWhraIsWt5i
+        /CWwFhvlMtp51aG8zytfn2btvVPknjtH0ac32XznLjX3m2mSu4trj19w69ufOffgJ+olaM39+yy9+5jA
+        O98x/fYjzG88xeg5jJODTSstqeuhomKgr9xWGBp1/PfAtHV1hP3okUKznYahd+yM7DVXt/+44dlVir//
+        mq1fPWbPgx/Z//BHjjx6yvHHzzjx6CVNj95w+iE0PHzDJtmGSKApL2H29U8fL9lTE+8wamTr65QeXToL
+        Q8MO/x6Ypo6WGO89Uc49BdHbzFhYDjCxmJrgn7HgcPGdNc2XyH/zglxeUyydbJBKeQ0xcp82W8r9J3D6
+        4gETz5z90jMrNdfSuEfvwBXJYmyAv9CRvrt37vCfgbl4uglVZTVhZW8tBliYCrMBJkIuo06TwydMHT7f
+        J218VvT+D6rXnptVt/W63/6az6btqrg4ZkNGo31STP70lFh/8y4aRtYjh4nevXuJ2VmZYqz/rP8+2CBb
+        C2Fmadaaa8b5jmqnZ6RjZDLAwHHYtKEBI4Kco8aHe813DhwfPGi02WTzAd36zFwSpmaqJYSVg50ws+j/
+        18H+94T4P3WT1mxeaGBUAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="applicationButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAANbY1E9YMgAAABl0RVh0U29m
