--- a/QuanLiHocSinh/QuanLiHocSinh/frmAbout.resx
+++ b/QuanLiHocSinh/QuanLiHocSinh/frmAbout.resx
@@ -117,29 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="3485271" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\3485271.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="902759421" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\902759421.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="saoluu" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\saoluu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Employee Add copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\Employee Add copy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="39" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\39.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="348527" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\348527.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="thoat" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\thoat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="learning-prv" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\learning-prv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="labelX5.Text" xml:space="preserve">
+    <value>Phần mềm còn nhiều sai sót, hi vọng nhận được ý kiến đóng góp của mọi người để chương trình được hoàn thiện. Mọi ý kiến đóng góp xin gửi về địa chỉ email uit11520232@gmail.com. Xin chân thành cám ơn!!!.</value>
   </data>
 </root>
